--- a/ScraperProject/frontend/package.json
+++ b/ScraperProject/frontend/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "~9.0.0",
     "@angular/platform-browser-dynamic": "~9.0.0",
     "@angular/router": "~9.0.0",
+    "@fortawesome/angular-fontawesome": "^0.6.0",
+    "@fortawesome/fontawesome-svg-core": "^1.2.27",
+    "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@popperjs/core": "^2.0.5",
     "bootstrap": "^4.4.1",
     "jquery": "^3.4.1",
