--- a/ScraperProject/frontend/package.json
+++ b/ScraperProject/frontend/package.json
@@ -25,7 +25,9 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.27",
     "@fortawesome/free-solid-svg-icons": "^5.12.1",
     "@popperjs/core": "^2.0.5",
+    "angularx-social-login": "^2.2.1",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
