--- a/ScraperProject/frontend/angular.json
+++ b/ScraperProject/frontend/angular.json
@@ -24,10 +24,11 @@
                             "src/assets"
                         ],
                         "styles": [
-                            "./node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
-                            "./node_modules/bootstrap/dist/css/bootstrap.css",
+                            "node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+                            "node_modules/bootstrap/dist/css/bootstrap.css",
                             "node_modules/font-awesome/css/font-awesome.css",
-                            "src/styles.css"
+                            "src/styles.css",
+                            "node_modules/ngx-toastr/toastr.css"
                         ],
                         "scripts": [
                             "./node_modules/jquery/dist/jquery.min.js",
