--- a/ScraperProject/frontend/package.json
+++ b/ScraperProject/frontend/package.json
@@ -11,7 +11,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.0.0",
+    "@angular/animations": "^9.0.4",
     "@angular/cdk": "^9.0.0",
     "@angular/common": "~9.0.0",
     "@angular/compiler": "~9.0.0",
@@ -31,6 +31,7 @@
     "firebase": "^7.9.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.4.1",
+    "ngx-toastr": "^12.0.0",
     "popper.js": "^1.16.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
